project('ImageMagick', 'c', version: '0.0.1')
meson.override_dependency('ImageMagick-7.0', im_dep)
message('Building ImageMagick (make)')
r = run_command('./configure', check: true)
output = r.stdout().strip()
errortxt = r.stderr().strip()
r = run_command('make', '-j', '4', check: true)
output = r.stdout().strip()
errortxt = r.stderr().strip()
#message('Installing ImageMagick (make install - needs elevated privileges)')
#r = run_command('make', 'install', check: true)include
#output = r.stdout().strip()
#errortxt = r.stderr().strip()
message('Done with ImageMagick (make)')
